--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 # sonar-project.properties - Configuração do SonarCloud
-sonar.projectKey=Thmn93_api-sast
-sonar.organization=thmn93
+sonar.projectKey=Pazetti_api-sast
+sonar.organization=Pazetti
 
 # Metadados do projeto
 sonar.projectName=api-sast
