Sonar org change

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 # sonar-project.properties - Configuração do SonarCloud
 sonar.projectKey=Pazetti_api-sast
-sonar.organization=Pazetti
+sonar.organization=pazetti
 
 # Metadados do projeto
 sonar.projectName=api-sast
